added div to imgs

--- a/css/positioning/octo-page.html
+++ b/css/positioning/octo-page.html
@@ -7,9 +7,15 @@
 <body>
   <main>
   	<section>
-  		<img src="glasses.png" id="glasses" />
-  		<img src="hat.png" id="hat" />
-  		<img src="octopus.png" id="octopus" />
+	  	<div id="glass">
+	  		<img src="glasses.png" id="glasses" />
+	  	</div>
+	  	<div id="hat">
+	  		<img src="hat.png" id="hat" />
+	  	</div>
+	  	<div id="octopus">
+	  		<img src="octopus.png" id="octopus" />
+	  	</div>
   	</section>
   </main>
 </body>
